--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                   // если вместо баркода был добавлен .patt, на его место в массив добавляется -1
                   const patternBarcode = [-1 ,-1 ,-1 ,-1 ,-1 ,-1];
                   // Массив типов контента для каждого маркера, заполняется значиями: изображение, модель, видео
-                  const modes = ["image" ,"image" ,"image" ,"image" ,"image" ,"image"];
+                  const modes = ["" ,"" ,"" ,"" ,"" ,""];
                   // Массив файлов моделей, если нет модели будет добавлена пустая строка
                   const modelFiles = ["" ,"" ,"" ,"" ,"" ,""];
                   // Массив файлов изображений, если нет изображения будет добавлена пустая строка
