--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
                 deltaTime = clock.getDelta();
                 totalTime += deltaTime;
                 update();
-                checkController();
+                //checkController();
                 render();
             }
 
