--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                   // Массив файлов видео, если нет видео будет добавлена пустая строка
                   const videoFiles = ["" ,"" ,"" ,"" ,"" ,""];
                   // Массив файлов аудио, если нет аудио будет добавлена пустая строка
-                  const audioFiles = ["" ,"" ,"" ,"" ,"" ,""];
+                  const audioFiles = ["1.mp3" ,"2.mp3" ,"3.mp3" ,"4.mp3" ,"5.mp3" ,"6.mp3"];
                   // Массив опций повтора аудио и видео контента, по дефолту для всех будет false
                   const repeatOptions = ["true" ,"true" ,"true" ,"true" ,"true" ,"true"];
                     
@@ -244,12 +244,12 @@
                             break;
                         default:
                             // Если никакого контента добавленно не было, добавляем обычный красный куб 1х1х1
-                            let mesh = new THREE.Mesh(
-                                new THREE.CubeGeometry(1, 1, 1),
-                                new THREE.MeshBasicMaterial({ color: colors[i], transparent: true, opacity: 0.5 })
-                            );
-                            mesh.position.y = 0.5;
-                            markerRoots[i].add(mesh);
+                            //let mesh = new THREE.Mesh(
+                            //    new THREE.CubeGeometry(1, 1, 1),
+                            //    new THREE.MeshBasicMaterial({ color: colors[i], transparent: true, opacity: 0.5 })
+                            //);
+                            //mesh.position.y = 0.5;
+                            //markerRoots[i].add(mesh);
                             break;
                     }
     
