--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
                             markerRoots[i].add(controller);
                             break;
                         default:
-                            Если никакого контента добавленно не было, добавляем обычный красный куб 1х1х1
+//                             Если никакого контента добавленно не было, добавляем обычный красный куб 1х1х1
                             let mesh = new THREE.Mesh(
                                new THREE.CubeGeometry(1, 1, 1),
                                new THREE.MeshBasicMaterial({ color: colors[i], transparent: true, opacity: 0.5 })
