--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                       alpha: true
                   });
                   renderer.setClearColor(new THREE.Color('lightgrey'), 0)
-                  renderer.setSize(640, 480);
+                  renderer.setSize(1920, 1080);
                   renderer.domElement.style.position = 'absolute'
                   renderer.domElement.style.top = '0px'
                   renderer.domElement.style.left = '0px'
@@ -111,8 +111,8 @@
                       detectionMode: 'mono_and_matrix',
                       matrixCodeType: "3x3",
                       maxDetectionRate: 60,
-                      canvasWidth: 640,
-                      canvasHeight: 480
+                      canvasWidth: 1920,
+                      canvasHeight: 1080
                   });
       
                   // Обновляем матрицу проекции камеры после окончания инициализации
@@ -326,7 +326,7 @@
 //                             }
 //                         })
                         if (patternsID.length) {
-                            patternsID.forEach((elem, index) => {
+                            for (let index = 0; i < patternsID.length; i++) {
                                 if (arToolkitContext.arController.patternMarkers[index].inCurrent) {
                                     let sound = patternsSound.get(index);
                                     if (sound && !sound.isPlaying) sound.play();
@@ -334,8 +334,7 @@
                                     let sound = patternsSound.get(index);
                                     if (sound && sound.isPlaying) sound.stop();
                                 }
-                            
-                            })
+                            }
                         }
                     }
                 }
