--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
           <title>Communication Game</title>
           <!-- Добавляем необходимые библиотеки -->
           <!-- Библиотека three.js -->
-          <script src="//cdnjs.cloudflare.com/ajax/libs/three.js/110/three.min.js"></script>
-          <!-- <script src='js/three.js'></script>
+<!--           <script src="//cdnjs.cloudflare.com/ajax/libs/three.js/110/three.min.js"></script> -->
+          <script src='js/three.js'></script>
           <script src='js/OBJLoader.js'></script>
-          <script src='js/MTLLoader.js'></script> -->
+          <script src='js/MTLLoader.js'></script>
           <!-- Библиотека tween.js -->
           <script src="js/tween.umd.js"></script>
           <!-- Добавляем jsartookit -->
