--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   
       <head>
           <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
-          <title>AR project template</title>
+          <title>Communication Game</title>
           <!-- Добавляем необходимые библиотеки -->
           <!-- Библиотека three.js -->
           <script src='js/three.js'></script>
@@ -129,7 +129,7 @@
                   // если вместо баркода был добавлен .patt, на его место в массив добавляется -1
                   const patternBarcode = [-1 ,-1 ,-1 ,-1 ,-1 ,-1];
                   // Массив типов контента для каждого маркера, заполняется значиями: изображение, модель, видео
-                  const modes = ["image" ,"image" ,"image" ,"image" ,"image" ,"image"];
+                  const modes = ["" ,"" ,"" ,"" ,"" ,""];
                   // Массив файлов моделей, если нет модели будет добавлена пустая строка
                   const modelFiles = ["" ,"" ,"" ,"" ,"" ,""];
                   // Массив файлов изображений, если нет изображения будет добавлена пустая строка
